--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,14 +5,40 @@
 }
 
 html {
-    text-color: rgb(53, 53, 53);
+    background-color: #fff;
+    color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
-    font-size: 20px;
     font-weight: 300;
+    font-size: 20px;
     text-rendering: optimizeLegibility;
 }
 
 .row {
     max-width: 1140px;
     margin: 0 auto;
+}
+
+header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.hero-text-box {
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+h1 {
+    margin: 0;
+    color: #fff;
+    font-size: 240%;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 4px;
 }
