--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,7 @@ html {
 .row {
     max-width: 1140px;
     margin: 0 auto;
+    outline: black dotted;
 }
 
 header {
@@ -23,6 +24,7 @@ header {
     background-size: cover;
     background-position: center;
     height: 100vh;
+    width: 100%;
 }
 
 .hero-text-box {
@@ -35,10 +37,31 @@ header {
 
 h1 {
     margin: 0;
+    margin-bottom: 20px;
     color: #fff;
     font-size: 240%;
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
     word-spacing: 4px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    
+}
+
+.btn-full {
+    background-color: #e67e22;
+    border: 1px solid #e67e22;
+    color: #fff;
+}
+
+.btn-ghost {
+    border: 1px solid #e67e22;
+    color: #e67e22;
 }
