--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,7 +46,8 @@ h1 {
     word-spacing: 4px;
 }
 
-.btn {
+
+.btn:link, .btn:visited {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -55,13 +56,17 @@ h1 {
     
 }
 
-.btn-full {
+.btn-full:link, .btn-full:visited {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
 }
 
-.btn-ghost {
+.btn-ghost:link, .btn-ghost:visited {
     border: 1px solid #e67e22;
     color: #e67e22;
+}
+
+.btn:hover, .btn:active {
+    background-color: #bf6516;
 }
