added rough draft of nav bar w/ properly sized logo

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -98,3 +98,13 @@ header {
     left: 50%;
     transform: translate(-50%,-50%);
 }
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+}
+
+.main-nav {
+    float: right;
+}
