--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,7 +25,6 @@ html {
 .row {
     max-width: 1140px;
     margin: 0 auto;
-    outline: black dotted;
 }
 
 /* -------------------- HEADINGS --------------------- */
@@ -103,8 +102,23 @@ header {
     height: 100px;
     width: auto;
     float: left;
+    margin-top: 20px;
 }
 
 .main-nav {
     float: right;
+    list-style: none;
+    margin-top: 50px;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a:link, .main-nav li a:visited {
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
 }
