--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,19 +30,43 @@ html {
     margin: 0 auto;
 }
 
+section {
+    padding: 80px 0;
+}
 /* -------------------- HEADINGS --------------------- */
 
-h1 {
-    margin: 0;
-    margin-bottom: 20px;
-    color: #fff;
-    font-size: 240%;
+h1,
+h2 {
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
+    
+}
+
+h1 {
+    margin-bottom: 20px;
+    margin-top: 0;
+    color: #fff;
+    font-size: 240%;
     word-spacing: 4px;
 }
 
+h2 {
+    font-size: 180%;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+h2:after {
+    display: block;
+    height: 2px;
+    background-color: #e67e22;
+    content: " ";
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 30px;
+}
 /* ----------- BUTTONS ---------------- */
 
 .btn:link, 
