--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -33,10 +33,15 @@ html {
 section {
     padding: 80px 0;
 }
+
+.box {
+    padding: 1%;
+}
 /* -------------------- HEADINGS --------------------- */
 
 h1,
-h2 {
+h2,
+h3 {
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -67,6 +72,17 @@ h2:after {
     margin: 0 auto;
     margin-top: 30px;
 }
+
+
+/* ----------- PARAGRAPHS ---------------- */
+
+.long-copy {
+    line-height: 145%;
+    width: 70%;
+    margin-left: 15%;
+}
+
+
 /* ----------- BUTTONS ---------------- */
 
 .btn:link, 
