--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,7 +44,7 @@ h2,
 h3 {
     font-weight: 300;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    
     
 }
 
@@ -54,6 +54,7 @@ h1 {
     color: #fff;
     font-size: 240%;
     word-spacing: 4px;
+    letter-spacing: 1px;
 }
 
 h2 {
@@ -61,6 +62,12 @@ h2 {
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 30px;
+    letter-spacing: 1px;
+}
+
+h3 {
+    font-size: 110%;
+    margin-bottom: 15px;
 }
 
 h2:after {
@@ -81,6 +88,20 @@ h2:after {
     width: 70%;
     margin-left: 15%;
 }
+
+.box p {
+    font-size: 90%;
+    line-height: 145%;
+}
+
+/* ----------- ICONS ---------------- */
+.icon-big {
+    font-size: 350%;
+    display: block;
+    color: #e67e22;
+    margin-bottom: 10px;
+}
+
 
 
 /* ----------- BUTTONS ---------------- */
