--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -204,6 +204,10 @@ header {
 /* MEALS */
 /* -------------------------------------------------------------- */
 
+.section-meals {
+    padding: 0;
+}
+
 .meals-showcase {
     list-style: none;
     width: 100%;
@@ -218,9 +222,18 @@ header {
 .meal-photo {
     width: 100%;
     margin: 0;
+    overflow: hidden;
+    background-color: #000; 
 }
 
 .meal-photo img {
+    opacity: 0.7;
     width: 100%;
     height: auto;
+    transform: scale(1.15);
+    transition: transform 0.5s;
+}
+
+.meal-photo img:hover {
+    transform: scale(1.03);
 }
