finished section and added additional spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -201,6 +201,14 @@ header {
 }
 
 /* -------------------------------------------------------------- */
+/* FEATURES */
+/* -------------------------------------------------------------- */
+
+.section-features .long copy {
+    margin-bottom: 30px;
+}
+
+/* -------------------------------------------------------------- */
 /* MEALS */
 /* -------------------------------------------------------------- */
 
@@ -236,4 +244,5 @@ header {
 
 .meal-photo img:hover {
     transform: scale(1.03);
+    opacity: 1;
 }
