--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -246,3 +246,24 @@ header {
     transform: scale(1.03);
     opacity: 1;
 }
+
+/* -------------------------------------------------------------- */
+/* HOW IT WORKS */
+/* -------------------------------------------------------------- */
+
+.steps-box {
+    margin-top: 30px;
+}
+
+.steps-box:first-child {
+    text-align: right;
+    padding-right: 3%;
+}
+
+.steps-box:last-child {
+    padding-left: 3%;
+}
+
+.app-screen {
+    width: 40%;
+}
