styling how it works section, modifying spacing on the step by step instructions

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -267,3 +267,14 @@ header {
 .app-screen {
     width: 40%;
 }
+
+.works-step {
+    margin-bottom: 50px;
+}
+
+.works-step div {
+    color: #e67e22;
+    border: 2px solid #e67e22;
+    display: inline-block;
+    
+}
