--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -251,17 +251,15 @@ header {
 /* HOW IT WORKS */
 /* -------------------------------------------------------------- */
 
-.steps-box {
-    margin-top: 30px;
-}
-
 .steps-box:first-child {
     text-align: right;
     padding-right: 3%;
+    margin-top: 30px;
 }
 
 .steps-box:last-child {
     padding-left: 3%;
+    margin-top: 70px;
 }
 
 .app-screen {
@@ -276,5 +274,13 @@ header {
     color: #e67e22;
     border: 2px solid #e67e22;
     display: inline-block;
-    
+    border-radius: 50%;
+    height: 50px;
+    width: 55px;
+    text-align: center;
+    padding: 5px;
+    float: left;
+    font-size: 150%;
+    margin-right: 25px;
+
 }
