added a clearfix for float properties in the meals section, added slight backgrond color change

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,15 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.clearfix {zoom: 1}
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+ 
 /* -------------------------------------------------------------- */
 /* REUSABLE COMPONENTS */
 /* -------------------------------------------------------------- */
@@ -251,6 +260,10 @@ header {
 /* HOW IT WORKS */
 /* -------------------------------------------------------------- */
 
+.section-steps {
+    background-color: #f4f4f4;
+}
+
 .steps-box:first-child {
     text-align: right;
     padding-right: 3%;
@@ -270,7 +283,7 @@ header {
     margin-bottom: 50px;
 }
 
-.works-step: :last-of-type {
+.works-step:last-of-type {
     margin-bottom: 80px;
 }
 
