--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -170,7 +170,7 @@ header {
 
 .hero-text-box {
     position: absolute;
-    width: 1140px;
+    width: 90%;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
