--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,6 +46,7 @@ section {
 .box {
     padding: 1%;
 }
+
 /* -------------------- HEADINGS --------------------- */
 
 h1,
@@ -112,6 +113,17 @@ h2:after {
     margin-bottom: 10px;
 }
 
+.icon-small {
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    color: #e67e22;
+    margin-right: 10px;
+    /* aligning text + icons */
+    font-size: 120%;
+    line-height: middle;
+    margin-top: -5px;
+}
 
 
 /* ----------- BUTTONS ---------------- */
@@ -321,3 +333,4 @@ header {
 .city-feature {
     margin-bottom: 5px;
 }
+
