added links for twitter accounts and styled them

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -119,11 +119,27 @@ h2:after {
     text-align: center;
     color: #e67e22;
     margin-right: 10px;
+
     /* aligning text + icons */
     font-size: 120%;
     line-height: middle;
     margin-top: -5px;
 }
+/* ----------- LINKS ---------------- */
+a:link,a:active {
+    color: #e67e22;
+    text-decoration: none;
+    padding-bottom: 1px;
+    border-bottom: 1px solid #e67e22;
+    transition: border-bottom 0.2s, color 0.2s;
+}
+
+a:hover, 
+a:active {
+   color: #555;
+   border-bottom: 1px solid transparent;
+}
+
 
 
 /* ----------- BUTTONS ---------------- */
@@ -311,6 +327,11 @@ header {
     float: left;
     font-size: 150%;
     margin-right: 25px;
+}
+
+.btn-app:link, 
+.btn-app:visited {
+    border: 0;
 }
 
 .btn-app img {
