--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -194,6 +194,7 @@ header {
     background-position: center;
     height: 100vh;
     width: 100%;
+    background-attachment: fixed;
 }
 
 .hero-text-box {
@@ -355,3 +356,15 @@ header {
     margin-bottom: 5px;
 }
 
+/* -------------------------------------------------------------- */
+/* TESTIMONIALS */
+/* -------------------------------------------------------------- */
+
+.section-testimonials {
+    background-image: linear-gradient(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8), url(img/back-customers.jpg);
+    background-size: cover;
+    color: #fff;
+    /* Makes it so the image stays in place as you scroll */
+    background-attachment: fixed;
+    
+}
