--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -361,10 +361,27 @@ header {
 /* -------------------------------------------------------------- */
 
 .section-testimonials {
-    background-image: linear-gradient(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8), url(img/back-customers.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
     background-size: cover;
     color: #fff;
     /* Makes it so the image stays in place as you scroll */
     background-attachment: fixed;
-    
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+cite img {
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
 }
