added large display quotes, and made it properly spaced. Completed the testionials section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -372,6 +372,8 @@ blockquote {
     padding: 2%;
     font-style: italic;
     line-height: 145%;
+    position: relative;
+    margin-top: 40px;
 }
 
 cite {
@@ -380,8 +382,18 @@ cite {
     display: block;
 }
 
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -3px;
+}
+
 cite img {
-    height: 50px;
+    height: 45px;
     border-radius: 50%;
     margin-right: 10px;
+    vertical-align: middle;
 }
