--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -397,3 +397,18 @@ cite img {
     margin-right: 10px;
     vertical-align: middle;
 }
+
+/* -------------------------------------------------------------- */
+/* SIGN UP */
+/* -------------------------------------------------------------- */
+
+.section-plans {
+    background-color: #f4f4f4;
+}
+
+.plan-box {
+    background-color: #fff;
+    border-radius: 5px;
+    width: 90%;
+    margin-left: 5%;
+}
