--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -430,6 +430,14 @@ cite img {
     font-weight: 300;
 }
 
-plan-price-meal {
+.plan-price-meal {
     font-size: 80%;
+}
+
+/* .plan-box ul {
+    list-style: none;
+} */
+
+.plan-box ul li {
+    padding: 5px 0;
 }
