--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -411,14 +411,23 @@ cite img {
     border-radius: 5px;
     width: 90%;
     margin-left: 5%;
+    box-shadow: 0 2px 2px #efefef;
 }
 
 .plan-box div {
     padding: 15px;
     border-bottom: 1px solid #e8e8e8;
 }
+
+.plan-box div:first-child {
+    background-color: #fcfcfc;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
 .plan-box div:last-child {
     text-align: center;
+    border: 0;
 }
 
 .plan-price {
