--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -145,7 +145,8 @@ a:active {
 /* ----------- BUTTONS ---------------- */
 
 .btn:link, 
-.btn:visited {
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -155,7 +156,8 @@ a:active {
 }
 
 .btn-full:link, 
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -168,11 +170,16 @@ a:active {
     color: #e67e22;
 }
 
-.btn:hover, .btn:active {
+.btn:hover, 
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     background-color: #bf6516;
 }
 
-.btn-full:hover, .btn-full:active {
+.btn-full:hover, 
+.btn-full:active,
+input[type=submit] {
 
     border: 1px solid #bf6516;
     
@@ -452,4 +459,27 @@ cite img {
 
 .plan-box ul li {
     padding: 5px 0;
+}
+
+/* -------------------------------------------------------------- */
+/*  FORM */
+/* -------------------------------------------------------------- */
+
+.contact-form {
+    width: 60%;
+    /* this will center the form inside its parent element */
+    margin: 0 auto;
+}
+
+input[type=text],
+select[type=email],
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+
 }
