finished styling the contact form section, its looking good

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -481,5 +481,12 @@ textarea {
 }
 
 textarea {
-
+    height: 100px;
 }
+
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
+
+/* removes blue outline of text box */
+*:focus {outline: none}
