--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -490,3 +490,31 @@ input[type=checkbox] {
 
 /* removes blue outline of text box */
 *:focus {outline: none}
+
+
+/* -------------------------------------------------------------- */
+/*  FOOTER */
+/* -------------------------------------------------------------- */
+
+footer {
+    background-color: #333;
+
+}
+
+.social-icons {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li, 
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child, 
+.social-links li:last-child {
+    margin-right: 0;
+
+}
+
