--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -498,7 +498,7 @@ input[type=checkbox] {
 
 footer {
     background-color: #333;
-
+    padding: 50px;
 }
 
 .footer-nav {
@@ -529,4 +529,21 @@ footer {
     text-decoration: none;
     border: 0;
     color: #888;
+}
+
+.footer-nav li a:hover,
+.footer li a:active {
+    color: #ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 180%;
+}
+
+.footer p {
+    color: #888;
+    text-align: center; 
+    font-size: 90%;
+    margin-top: 30px;
 }
