--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -499,6 +499,7 @@ input[type=checkbox] {
 footer {
     background-color: #333;
     padding: 50px;
+    font-size: 80%;
 }
 
 .footer-nav {
@@ -538,12 +539,35 @@ footer {
 
 .social-links li a:link,
 .social-links li a:visited {
-    font-size: 180%;
+    font-size: 170%;
 }
 
-.footer p {
+.ion-social-facebook,
+.ion-social-instagram,
+.ion-social-twitter,
+.ion-social-googleplus {
+    transition: color 0.2s;
+}
+
+.ion-social-facebook:hover {
+    color: #3b5998;
+}
+
+.ion-social-instagram:hover {
+    color: #517fa4;
+}
+
+.ion-social-twitter:hover {
+    color: #00aced;
+}
+
+.ion-social-googleplus:hover {
+    color: #dd4b39;
+}
+
+footer p {
     color: #888;
     text-align: center; 
-    font-size: 90%;
-    margin-top: 30px;
+    margin-top: 20px;
 }
+
