--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -3,12 +3,30 @@
 
 /* big tablets to computers */
 @media only screen and (max-width: 1200px) {
+    .hero-text-box {
+    width: 100%;
+    padding: 0 2%;
+    }
 
+    .row { 
+        padding: 0 2%;
+    }
 }
 
 /* Small tablet to big tablets */
 @media only screen and (max-width: 1023px) {
+    body {
+        font-size: 18px;
+    }
+    
+    section {
+        padding: 60px 0;
+    }
 
+    .long-copy {
+        width: 80%;
+        margin-left: 10%;
+    }
 }
 
 /* Small phones to small tablets */
