finished making tablet size responsive

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -18,15 +18,48 @@
     body {
         font-size: 18px;
     }
-    
     section {
         padding: 60px 0;
     }
-
     .long-copy {
         width: 80%;
         margin-left: 10%;
     }
+    .steps-box {
+        margin-top: 10px;
+    }
+    .works-step {
+        margin-bottom: 40px;
+    }
+    .steps-box:last-child {
+        margin-top: 10px;
+    }
+    .works-step:last-of-type {
+        margin-bottom: 60px;
+    }
+    .app-screen {
+        width: 50%;
+    }
+    .icon-small {
+        width: 20px;
+        margin-right: 5px;
+    }
+    .city-feature {
+        font-size: 90%;
+    }
+    .plan-box {
+        width: 17px;
+        margin-right: 5px;
+    }
+
+    .plan-price {
+        font-size: 250%;
+    }
+
+    .contact-form {
+        width: 80%;
+    }
+
 }
 
 /* Small phones to small tablets */
