--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -64,7 +64,23 @@
 
 /* Small phones to small tablets */
 @media only screen and (max-width: 767px) {
+    body {
+        font-size: 16px;
+    }
+    section {
+        padding: 30x 0;
+    }
+    .row,
+    .hero-text-box {
+        padding: 0 4%;
+    }
 
+    .col {
+        width: 100%;
+    }
+    main-nav {
+        display: none;
+    }
 }
 
 /* The rules in here will apply when the screen width is less than or equal to 480px */
