finished styling it for a mobile size users

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -74,17 +74,53 @@
     .hero-text-box {
         padding: 0 4%;
     }
-
     .col {
         width: 100%;
+        margin: 0 0 4% 0;
     }
     main-nav {
         display: none;
     }
+    h1 {
+        font-size: 180%;
+    }
+    h2 {
+        font-size: 150%;
+    }
+    .long-copy {
+        width: 100%;
+        margin-left: 0%;
+    }
+    .app-screen {
+        width: 40%;
+    }
+    .steps-box:first-child {
+        text-align: center;
+    }
+    .works-step {
+        margin-bottom: 20px;
+    }
+    .works-step:last-of-type {
+        margin-bottom: 20px;
+    }
+
+    .works-step div {
+    height: 40px;
+    width: 40px;
+    padding: 4px;
+    margin-right: 15px;
+    font-size: 120%;
+   
+}
 }
 
 /* The rules in here will apply when the screen width is less than or equal to 480px */
 /* small phones have this size  */
 @media only screen and (max-width: 480px) {
-
+    section {
+        padding: 25px 0;
+    }
+    .contact-form {
+        width: 100%;
+    }
 }
